--- a/OfflineDemo/OfflineDemo/Properties/launchSettings.json
+++ b/OfflineDemo/OfflineDemo/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "OfflineDemo": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5273",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
